...
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Note Title"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinner_courses"
        app:layout_constraintStart_toStartOf="@+id/spinner_courses"
        app:layout_constraintTop_toBottomOf="@+id/spinner_courses" />

    <EditText
        android:id="@+id/text_note_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Note Text"
        android:inputType="textMultiLine"
...
